--- a/nicola.it.tex
+++ b/nicola.it.tex
@@ -1,93 +1,75 @@
 \documentclass[fontsize=10pt]{tccv}
-\usepackage[italian]{babel}
+\usepackage[portuguese]{babel}
 
 \begin{document}
 
-\part{Nicola Fontana}
+\part{Denis Vitor Bueno de Almeida}
 
-\section{Esperienze di lavoro}
+\section{Experiência de trabalho}
 
 \begin{eventlist}
 
-\item{Luglio 2007 -- Presente}
-     {eNTiDi software, Travagliato}
-     {Amministratore e sviluppatore}
+\item{Julho 2017 -- Presente}
+     {Venturus - Inovação \& Tecnologia, Campinas / SP}
+     {Assistente de testes de sistemas}
 
-Sviluppo software per l'automazione industriale in genere:
-front-end di configurazione in C con interfaccia
-\href{http://www.gtk.org/}{GTK+}, applicativi e siti web su piattaforma
-LAMP con framework \href{http://www.silverstripe.org/}{SilverStripe},
-programmi di supervisione in LabVIEW e sistemi di remotizzazione in
-\href{http://www.lua.org/}{Lua} su GNU/Linux.
+Testes funcionais em aplicações Android embarcadas:
+Aplicações core do sistema, customizações de operadoras americanas, modicações do fabricante, TV Digital, Rádio FM, framework (genérico, conectividade, telefonia e UI) e nova UI de aplciativo nativo legado.
+Testes de RF feitos em laboratório com ambiente simulado.
+Cliente multinacional, contato diário com times da Índia, China e EUA.
+Automação de ferramentas e tarefas diárias com Python, Shell e Batch.
+Experiência de dois meses em Chicago, IL alocado na sede do cliente.
 
-\item{Gennaio 2002 -- Giugno 2004}
-     {TEMA s.r.l., Travagliato}
-     {Programmazione PLC Omron}
+\item{Janeiro 2017 -- Junho 2017}
+     {Venturus - Inovação \& Tecnologia, Campinas / SP}
+     {Estagiário de testes de sistemas}
 
-Programmazione e collaudo di macchine automatiche e
-semiautomatiche per l'avvolgimento di nastri in bobine e rotoli (cinture
-di sicurezza, nastro a strappo, tessuti elastici e fettucce). Sviluppo
-degli impianti elettrotecnici con cad 2D e stesura dei manuale
-utente.
+Testes funcionais em aplicações Android embarcadas:
+Aplicações core do sistema, modicações do fabricante, TV Digital, Rádio FM e Google Enterprise compliance.
+Cliente multinacional, contato diário com times da Índia, China e EUA.
+Introdução à automação de ferramentas e tarefas diárias com Python, Shell e Batch.
 
-\item{Ottobre 1998 -- Novembre 2001}
-     {TWINS s.r.l., Sarezzo}
-     {Programmazione PC e PLC Siemens}
+\item{Maio 2016 -- Dezembro 2016}
+     {IBM (Decision Group), São Paulo / SP}
+     {Quality Assurance Specialist}
 
 Programmazione, installazione e verifica di macchine a
 trasferta per l'assemblaggio e il collaudo di rubinetti del gas e di
 banchi di prova semiautomatici per il controllo pneumatico e idraulico
 di valvolame, regolatori del gas, elettrovalvole e altro.
 
-\item{Settembre 1996 -- Settembre 1998}
-     {Elettronica EFFE-GI s.n.c., Cazzago}
-     {Programmazione PC e PLC Hitachi}
-
-Programmazione di macchine automatiche e semiautomatiche per
-l'automazione in genere, ivi incluso progettazione dell'impianto
-elettrico, pneumatico e idraulico su cad 2D. Implementazione di
-programmi di configurazione e logging via seriale tra PC e PLC prima in
-BASIC e poi in Pascal e C su piattaforme MS-DOS.
-
-\item{Gennaio 1994 -- Giugno 1996}
-     {Seven Diesel s.p.a., Rovato}
-     {Direttore ufficio tecnico}
-
-Progettazione di polverizzatori per motori diesel ed ingegnerizzazione
-della produzione. Aggiornamento del sistema gestionale attraverso lo
-sviluppo di \href{http://adg.entidi.com/home/history/}{un applicativo}
-per la manipolazione di dati e la generazione automatica di disegni in
-DXF basato su database SuperBase 95.
-
 \end{eventlist}
 
 \personal
-    [www.entidi.it]
-    {viale Conciliazione, 13\newline 25039 -- Travagliato (BS)}
-    {(030) 6862332}
-    {ntd@entidi.it}
+    [Solteiro, Brasileiro]
+    {Rua Olegário Bueno da Silva, 181\newline Remanso Campineiro -- Hortolândia/SP}
+    {(19) 9 9759 2534 / (19) 9 9478 1044}
+    {denis.meida@gmail.com \newline (\href{https://www.linkedin/in/denisvba}{in/denisvba})}
 
-\section{Educazione}
+\section{Educação}
 
 \begin{yearlist}
 
-\item[Diploma]{1988 -- 1992}
-     {Perito informatico}
-     {ITIS Castelli, Brescia}
+\item[Graduação]{2016 -- 2019}
+     {Tecnologia em Análise e Desenvolvimento de Sistemas}
+     {Instituto Federal de São Paulo, Hortolândia}
 
-\item{1987 -- 1988}
-     {Ginnasio classico}
-     {Seminario vescovile, Cremona}
+\item{2014 -- Interrompido}
+     {Técnico em Informática}
+     {Instituto Federal de São Paulo, Hortolândia}
+
+\item{2013 -- 2015}
+     {Ensino médio}
+     {SESI 437, Hortolândia}
 
 \end{yearlist}
 
-\section{Progetti pubblici}
+\section{Cursos e eventos}
 
 \begin{yearlist}
 
-\item{2013}
-     {silverstripe (\href{http://silverstripe.entidi.com/}{silverstripe.entidi.com})}
-     {Temi e moduli basati su SilverStripe}
+\item{2018}
+     {Bootcamp Automação de testes com Protractor -- Venturus}
 
 \item{2012}
      {ntdisp (\href{http://ntdisp.entidi.com/}{ntdisp.entidi.com})}
@@ -111,28 +93,26 @@ DXF basato su database SuperBase 95.
 
 \end{yearlist}
 
-\section{Capacit\'a comunicativa}
+\section{Idiomas}
 
 \begin{factlist}
-\item{Italiano}{Madrelingua}
-\item{Inglese} {Orale: discreto -- Scritto: buono}
-\item{Spagnolo}{Orale: buono}
+\item{Português}{Nativo}
+\item{Inglês (B2)}{Oral: Boa -- Escrita: Boa}
+\item{Espanhol}{Oral: Razoável -- Escrita: Razoável}
 \end{factlist}
 
-\section{Conoscenze software}
+\section{Habilidades de TI}
 
 \begin{factlist}
 
-\item{Livello ottimo}
-     {C, PHP, HTML, CSS, autotools, git, gcc, GTK+/GObject, shell,
-      Linux, G-Code, Lua}
+\item{Bom}
+     {Testes de , JIRA, Linux, Windows, Python, SQL, Kanban, Android Tools}
 
-\item{Livello intermedio}
-     {FreeBSD, MS-DOS, \LaTeX, MySQL, VBA, cuBasic, ladder, pascal,
-      LabVIEW}
+\item{Intermediário}
+     {Java, macOS, shell, batch, sqlite, HTML, CSS, Scrum, Redes, Office suites}
 
-\item{Livello base}
-     {Windows, OpenIndiana, subversion,  Postgres, Erlang, Forth}
+\item{Básico}
+     {git, Postgres, mysql, JavaScript, C, PHP, Protractor, \LaTeX}
 
 \end{factlist}
 
